Fix avance fisico

--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
@@ -17,7 +17,7 @@
   	</div>
 </section>
 
-<section class="text-center table-responsive size-table" style="margin-top: 2em;">
+<section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="tablaAvanceFisico.data.length > 0">
     <table mat-table [dataSource]="tablaAvanceFisico" matSort>
         <ng-container matColumnDef="semanaNumero">
           <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Semana número </th>
@@ -115,7 +115,7 @@
             </mat-card-content>
         </mat-card>
     
-        <form [formGroup]="formAvanceFisico" novalidate (ngSubmit)="guardar()">
+        <form [formGroup]="formAvanceFisico" novalidate (ngSubmit)="guardar()" *ngIf="tablaAvanceFisico.data.length > 0">
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-12">
                     <div class="row justify-content-center align-items-center" style="width: 100%;">
@@ -171,7 +171,7 @@
             </div>
         </form>
     
-        <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0">
+        <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="dataHistorial.length > 0 && tablaAvanceFisico.data.length > 0">
             <table mat-table [dataSource]="tablaHistorial" matSort>
           
                 <ng-container matColumnDef="fechaRevision">
