--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
@@ -38,7 +38,7 @@
 
     <mat-expansion-panel class="expansion-style sub-expansion">
       <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title class="expansion-style--title" [ngClass]="semaforoAvanceFisico">
+        <mat-panel-title class="expansion-style--title" [ngClass]="seguimientoSemanal.flujoInversion.length > 0 ? semaforoAvanceFisico : ''">
           Avance físico
         </mat-panel-title>
       </mat-expansion-panel-header>
