--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/form-registrar-seguimiento-semanal/form-registrar-seguimiento-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/form-registrar-seguimiento-semanal/form-registrar-seguimiento-semanal.component.html
@@ -52,7 +52,7 @@
         <mat-accordion>
             <mat-expansion-panel class="expansion-style">
                 <mat-expansion-panel-header class="expansion-style--header">
-                    <mat-panel-title class="expansion-style--title" [ngClass]="semaforoAvanceFisico">
+                    <mat-panel-title class="expansion-style--title" [ngClass]="seguimientoSemanal.flujoInversion.length > 0 ? semaforoAvanceFisico : ''">
                         Avance físico
                     </mat-panel-title>
                 </mat-expansion-panel-header>
