--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/verificar-avance-fisico/verificar-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/verificar-avance-fisico/verificar-avance-fisico.component.html
@@ -36,7 +36,7 @@
 
         <mat-expansion-panel class="expansion-style sub-expansion">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title" [ngClass]="estadoSemaforo">
+                <mat-panel-title class="expansion-style--title" [ngClass]="seguimientoSemanal.flujoInversion.length > 0 ? estadoSemaforo : ''">
                     Avance físico
                 </mat-panel-title>
             </mat-expansion-panel-header>
