--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()" *ngIf="!esVerDetalle">
+<form [formGroup]="addressForm" novalidate *ngIf="!esVerDetalle">
     <div align="center">
         <label class="label-left" for="requiereTransladoRecursos" *ngIf="tieneOrdenGiro">
           ¿Se requiere registrar un traslado de recursos entre los aportantes y fuentes que financian este proyecto,
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col d-flex justify-content-center">
                     <mat-radio-group class="radioInput" formControlName="requiereTransladoRecursos" required>
-                        <!--<mat-radio-button [value]="true">Sí</mat-radio-button>-->
+                        <mat-radio-button [value]="true">Sí</mat-radio-button>
                         <mat-radio-button [value]="false">No</mat-radio-button>
                     </mat-radio-group>
                     <span class="required-form-group" style="margin-left: 1px;">*</span>
@@ -83,7 +83,7 @@
         </span>
     </div>
     <div class="text-center mb-2em mt-2em" *ngIf="!noPermitirGuardarOtraVez">
-        <button mat-button color="warn" class="btn-guardar" type="submit">
+        <button mat-button color="warn" class="btn-guardar" type="button" (click)="onSubmit()">
             <img src="assets/img/icon/guardar.svg" alt="Guardar">
         </button>
     </div>
@@ -100,26 +100,31 @@
           <span>{{ addressForm.get('fechaCreacion').value | date: 'dd/MM/yyyy' }} </span>
         </strong>
       </p>
-      <p>
-        <strong>
-            ¿Se requiere registrar un traslado de recursos entre los aportantes y fuentes que financian este proyecto,
-            antes de aprobar el balance financiero?:
-        </strong>
+        <p>
+            <strong>
+                ¿Se requiere registrar un traslado de recursos entre los aportantes y fuentes que financian este proyecto,
+                antes de aprobar el balance financiero?:
+            </strong>
 
-        <i *ngIf="addressForm.get('requiereTransladoRecursos').value == true"> Si </i>
-        <i *ngIf="addressForm.get('requiereTransladoRecursos').value != true"> No </i>
-      </p>
-      <p
-        class="text-justify"
-        *ngIf="addressForm.get('justificacionTrasladoAportanteFuente').value != null && addressForm.get('justificacionTrasladoAportanteFuente').value != ''"
-        [innerHTML]="addressForm.get('justificacionTrasladoAportanteFuente').value"
-      ></p>
+            <i *ngIf="addressForm.get('requiereTransladoRecursos').value == true"> Si </i>
+            <i *ngIf="addressForm.get('requiereTransladoRecursos').value != true"> No </i>
+        </p>
+        <p  class="text-justify"
+            *ngIf="addressForm.get('justificacionTrasladoAportanteFuente').value != null && addressForm.get('justificacionTrasladoAportanteFuente').value != '' && addressForm.get('requiereTransladoRecursos').value == true"
+            [innerHTML]="addressForm.get('justificacionTrasladoAportanteFuente').value">
+        </p>
+        <p *ngIf="addressForm.get('urlSoporte').value != null && addressForm.get('urlSoporte').value != '' && addressForm.get('requiereTransladoRecursos').value == true">
+            {{ addressForm.get('urlSoporte').value }}
+        </p>
     </mat-card-content>
   </mat-card>
 
 <div  class="text-center mb-3em mt-2em animatedDown"
-      *ngIf="addressForm.get('requiereTransladoRecursos').value === true && addressForm.get( 'justificacionTrasladoAportanteFuente' ).value !== null && balanceFinancieroId > 0 && trasladoPendiente === false">
+      *ngIf="addressForm.get('requiereTransladoRecursos').value === true && addressForm.get( 'justificacionTrasladoAportanteFuente' ).value !== null && balanceFinancieroId > 0 && trasladoPendiente === false && !esVerDetalle">
     <a [routerLink]="[ '/gestionarBalanceFinancieroTrasladoRecursos/registrarTraslado', id ]" mat-raised-button color="accent" class="btn-cargar-proyecto">Registrar traslado</a><br>
 </div>
 
-<app-tabla-traslados-gbftrec *ngIf="addressForm.get('requiereTransladoRecursos').value === true && balanceFinancieroTraslado.length > 0" [balanceFinancieroTraslado]="balanceFinancieroTraslado"></app-tabla-traslados-gbftrec>
+<app-tabla-traslados-gbftrec    *ngIf="addressForm.get('requiereTransladoRecursos').value === true && balanceFinancieroTraslado.length > 0"
+                                [balanceFinancieroTraslado]="balanceFinancieroTraslado"
+                                [esVerDetalle]="esVerDetalle">
+</app-tabla-traslados-gbftrec>
