--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/preparacion/preparacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/preparacion/preparacion.component.html
@@ -408,7 +408,7 @@
                         <strong>
                           Fecha de aprobación de la totalidad de las hojas de vida:
                         </strong>
-                        {{ hv.fechaAprobacion }}
+                        {{ hv.fechaAprobacion | date: 'dd/MM/yyyy' }}
                       </p>
                       <p>
                         <strong>
