--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/resumen-p/resumen-p.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/resumen-p/resumen-p.component.html
@@ -76,7 +76,7 @@
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <p>
+      <p *ngIf="dataResumen && dataResumen.infoProyecto && dataResumen.infoProyecto.plazoMesesObra && dataResumen.infoProyecto.plazoDiasObra">
         <strong>
           Plazo de obra:
         </strong>
@@ -89,7 +89,7 @@
         </strong>
         {{ dataResumen?.infoProyecto?.valorObra | currency:'COP':'symbol-narrow':'.0-0' }}
       </p>
-      <p>
+      <p *ngIf="dataResumen && dataResumen.infoProyecto && dataResumen.infoProyecto.plazoMesesInterventoria && dataResumen.infoProyecto.plazoDiasInterventoria">
         <strong>
           Plazo de interventoría:
         </strong>
